@@ -51,6 +51,7 @@
 * Fixed a problem when using Add/Subtract textures with bump mapping (issue #689)
 * GlossyCoating is now a delta material if the base material is
 * Fixed a crash when editing light source emission
+* Added a work around to pyluxcoretools with PySide2 causing a std::bad_cast
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
